--- a/server/views/chat.pug
+++ b/server/views/chat.pug
@@ -3,7 +3,7 @@ extends layout/index
 block content
   header.page-section
     .container
-      h2.section-title Chat
+      h2.page-section-title Chat
       p.section-subtitle.center We&apos;ve got a ticket for everyone. Which one for you?
   section.page-section.chat.gradient
     .container.small
