--- a/server/views/conduct.pug
+++ b/server/views/conduct.pug
@@ -3,7 +3,7 @@ extends layout/index
 block content
   header.page-section
     .container
-      h2.section-title Code of Conduct
+      h2.page-section-title Code of Conduct
       p.section-subtitle.center We take our code of conduct very seriously &amp; you should too.
   section.page-section.conduct
     .container.small
