--- a/server/views/location.pug
+++ b/server/views/location.pug
@@ -3,7 +3,7 @@ extends layout/index
 block content
   header.page-section
     .container
-      h2.section-title Conference Venue
+      h2.page-section-title Conference Venue
       p.section-subtitle.center Jeonju University, Star Center 
       p.center
         a.button(href='http://koreatesol.org/content/jeonju-venue-directions') Venue Directions PDF
