--- a/server/views/notfound.pug
+++ b/server/views/notfound.pug
@@ -3,8 +3,8 @@ extends layout/index
 block content
   header.page-section
     .container
-      h2.section-title Not Found
-      p.section-subtitle.center We&apos;ve got a ticket for everyone. Which one for you?
+      h2.page-section-title Not Found
+      p.section-subtitle.center Whoops! Are you lost?
   section.page-section
     .container.small
       h1 404
