--- a/server/views/speaker-single.pug
+++ b/server/views/speaker-single.pug
@@ -4,7 +4,7 @@ extends layout/index
 block content
   header.page-section
     .container
-      h2.section-title= speaker.name
+      h2.page-section-title= speaker.name
       p.section-subtitle.center= speaker.affiliation
   section.page-section
     .container.small
