--- a/server/views/speakers.pug
+++ b/server/views/speakers.pug
@@ -5,6 +5,8 @@ block content
   //- include partials/speaker-single 
   header.page-section
     .container
-      h2.section-title Speakers
+      h2.page-section-title Speakers
       p.section-subtitle.center Big names, Bigger ideas
+
+  include partials/plenary
   include partials/speaker-list
