--- a/server/views/team.pug
+++ b/server/views/team.pug
@@ -3,6 +3,6 @@ extends layout/index
 block content
   header.page-section
     .container
-      h2.section-title About the Organizing Committee
+      h2.page-section-title About the Organizing Committee
       p.section-subtitle.center This conference wouldn't be possible without the dedicated time and energy of these wonderful people.
   include partials/team-list
