--- a/server/views/tickets.pug
+++ b/server/views/tickets.pug
@@ -3,7 +3,7 @@ extends layout/index
 block content
   header.page-section
     .container
-      h2.section-title Let&apos;s Make it Official
+      h2.page-section-title Let&apos;s Make it Official
       p.section-subtitle.center We&apos;ve got a ticket for everyone. Which one for you?
   section.page-section
     .container
@@ -33,7 +33,7 @@ block content
             .buy
               p.center Contact us for details
               p.center
-                a.page-button.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
+                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
         li.center
           .ticket
             .price
@@ -92,7 +92,7 @@ block content
             .buy
               p.center Contact us for details
               p.center
-                a.page-button.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
+                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
         li.center
           .ticket
             .price
@@ -159,4 +159,4 @@ block content
             .buy
               p.center Contact us for details
               p.center
-                a.page-button.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
+                a.page-button.button-inverse.button(href='mailto:jnj.presenters@gmail.com') Yes! I want this!
