--- a/server/views/feedback.pug
+++ b/server/views/feedback.pug
@@ -3,7 +3,7 @@ extends layout/index
 block content
   header.page-section
     .container
-      h2.section-title Feedback
+      h2.page-section-title Feedback
       p.section-subtitle.center Like what you see? Let us know.
   section.page-section.feedback
     .container.small
