--- a/server/views/partials/team-list.pug
+++ b/server/views/partials/team-list.pug
@@ -2,20 +2,21 @@
   h2.section-title Organizing Team
   // http://davist11.github.io/css-diamond-grid/#
   .grid.team-grid
-    article.speaker.team-member
-      .grid-item.photo
-        .grid-inner(style="background-image: url('/img/people/#');")
-          //
-            <figure  class="diamonds-item photo rhombus bg-primary">
-            <img class="speaker-img" src="/img/people/#">
-            </figure>
-        .attendee-img-shadow
-        .attendee-img-shadow-yellow
-      .speaker-info-section
-        .speaker-info
-          h3.speaker-bio-title #
-          p.team-member-title #
-          p.speaker-bio #
-      // .speaker-info-section
-    // .team-member
-    // <a class="page-button button">Register today!</a>
+    each member in team
+      article.speaker.team-member
+        .grid-item.photo
+          .grid-inner(style=`background-image: url('/img/people/${member.img}');`)
+            //
+              <figure  class="diamonds-item photo rhombus bg-primary">
+              <img class="speaker-img" src=`/img/people/${team.img}`>
+              </figure>
+          .attendee-img-shadow
+          .attendee-img-shadow-yellow
+        .speaker-info-section
+          .speaker-info
+            h3.speaker-bio-title member.title
+            p.team-member-title member.title
+            p.speaker-bio member.bio
+        // .speaker-info-section
+      // .team-member
+      // <a class="page-button button">Register today!</a>
