--- a/server/views/privacy.pug
+++ b/server/views/privacy.pug
@@ -3,7 +3,7 @@ extends layout/index
 block content
   header.page-section
     .container.small
-      h2.section-title Privacy Policy
+      h2.page-section-title Privacy Policy
       p.section-subtitle.center 
         | At KOTESOL, we take your personal information seriously. 
         br 
