--- a/server/views/layout/includes/footer.pug
+++ b/server/views/layout/includes/footer.pug
@@ -53,6 +53,8 @@ section.site-footer
           <li class="conference-details-nav-item">
           <a href="/chat">Chat</a>
           </li>
+.topbutton
+  i.fas.fa-arrow-up
 footer.site-credits
   .container
     p.copyright
