--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -85,5 +85,5 @@ block content
   //- section.page-section.sponsors 
   //-   include partials/sponsors-list 
 
-  section.conference-map
+  section.page-section.conference-map
     include partials/map 
