--- a/server/views/layout/includes/header.pug
+++ b/server/views/layout/includes/header.pug
@@ -23,7 +23,7 @@ include call
             a(href='/location') Jeonju
           .top-buttons
             a.button.ticket-button(href='/tickets') Tickets
-            button.site-mobile-menu-button.not-home
+            button.site-mobile-menu-button.not-home.show
               i.fa.fa-bars
               |  Menu
     .header-bottom
