--- a/public/css/new-style.css
+++ b/public/css/new-style.css
@@ -337,7 +337,13 @@ th {
 }
 
 .show {
-  display: inline-block!important;
+  display: none;
+}
+
+@media screen and ( max-width: 50rem ) {
+  .show {
+    display: inline-block!important;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -592,7 +598,7 @@ li {
 }
 
 .site-banner * {
-  transition: all 0.3s;
+  transition: height, background 0.3s;
 }
 
 #home .site-banner.top,
@@ -657,21 +663,15 @@ li {
   /* float: left; */
   /* display: inline-block; */
   margin-right: -0.5rem;
+  margin-top: 2px;
   max-height: 40px;
 }
 
-.logo-image-small {
-  height: 28px;
-  display: none;
-}
-
-@media screen and (max-width: 48rem) {
+@media screen and (max-width: 60rem) {
   .logo-image {
-    display: none;
-  }
-  .logo-image-small {
-    display: block;
-    float: left;
+    max-height: 30px;
+    margin-top: 6px;
+    margin-right: 4px;
   }
 }
 
@@ -715,7 +715,8 @@ li {
 
 @media screen and (max-width: 60rem) {
   .header-top .banner-location {
-    visibility: hidden;
+    /* visibility: hidden; */
+    display: none;
   }
 }
 
@@ -773,14 +774,15 @@ li {
 .mobile-menu.active .site-menu {
   display: block;
   position: fixed;
-  top: 63px;
+  /* top: 63px; */
   right: 0rem;
   width: 100%;
   height: 100%;
-  z-index: 20;
+  z-index: 200;
   background: rgba(32,27,72,0.9);
   align-self: flex-start;
   transition: all 0.3s;
+  overflow: scroll;
 }
 
 .mobile-menu.active .site-menu ul {
@@ -827,11 +829,12 @@ li {
   left: 50%;
   top: 5rem;
   transform: translateX(-50%);
+  padding: 0;
   /* bottom: 0; */
 }
 
 .site-mobile-menu-button {
-  display: block;
+  display: inline-block;
   padding: 0.5rem 1rem;
   background: white;
   font-weight: 400;
@@ -978,6 +981,7 @@ li {
 
 .conference-info p {
   opacity: 1;
+  z-index: 10;
 }
 
 .conference-title {
@@ -999,6 +1003,12 @@ li {
   margin: 0 auto 6rem;
 }
 
+@media screen and (max-width: 40rem) {
+  .conference-logo {
+    margin: 0 auto 4rem;
+  }
+}
+
 .conference-logo:hover,
 .conference-logo:focus,
 .conference-logo:active {
@@ -1013,6 +1023,12 @@ li {
 
 .presented-by img {
   margin: 1rem auto;
+}
+
+@media screen and (max-width: 40rem) {
+  .presented-by img {
+    max-height: 30px;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -1207,6 +1223,12 @@ a.ticket-button {
   padding: 4px 15px;
   margin-left: 0.5rem;
   top: 5px;
+}
+
+@media screen and (max-width: 50rem) {
+  a.ticket-button {
+    top: 0;
+  }
 }
 
 .site-menu-bar.smaller .ticket-button {
@@ -1420,6 +1442,10 @@ header.page-section {
   .whatiskotesol {
     grid-template-columns: 1fr;
   }
+
+  .whatiskotesol dt img {
+    margin: 2rem auto 0 auto;
+  }
 }
 
 .whatiskotesol h2 {
@@ -1445,7 +1471,7 @@ header.page-section {
   background: linear-gradient(to bottom, #201b48 0%,#161637 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#201b48', endColorstr='#161637',GradientType=0 ); /* IE6-9 */
   color: white;
-  padding: 2rem 0 8rem;
+  padding: 6rem 0 12rem;
 }
 
 #speakers .plenary {
@@ -1742,7 +1768,7 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
 }
 
 .conference-map .section-title {
-  transform: translateY(100px);
+  transform: translateY(80px);
 }
 
 .schedule {
@@ -1754,6 +1780,7 @@ clip-path: polygon(0 0%, 100% 0, 100% 100%, 0 100%);
   /* width: 100vw;
   min-height: 60vh;
   height: auto; */
+  padding: 6rem auto;
 }
 
 .schedule:before {
@@ -4394,6 +4421,12 @@ h4.sponsor-section-title {
   grid-column-gap: 2rem;
   grid-template-columns: 1fr 1fr;
 }
+
+@media screen and (max-width: 46rem) {
+  .grid-it-2 {
+    display: block;
+  }
+}
 /* .site-title a {
   height: 100%;
   width: 100%;
@@ -4453,10 +4486,28 @@ h4.sponsor-section-title {
   line-height: 4;
 }
 
+@media screen and (max-width: 60rem) {
+  .header-bottom {
+    left: 156px;
+  }
+}
+
+@media screen and (max-width: 50rem) {
+  .header-bottom .center {
+    display: none;
+  }
+}
 
 .top-buttons {
   float: right;
   margin-left: 0.5rem;
+  margin-top: 0;
+}
+
+@media screen and (max-width: 60rem) {
+  .top-buttons {
+    margin-top: -1rem;
+  }
 }
 
 /**
@@ -4492,11 +4543,14 @@ h4.sponsor-section-title {
   display: block;
   transform: rotate(-90deg);
   opacity: 0.2;
+  width: 100px;
+  height: 100px;
 }
 
 #countdown {
   list-style: none;
   margin-bottom: 1em;
+  padding: 0;
 }
 #countdown li {
   display: inline-block;
@@ -4507,7 +4561,7 @@ h4.sponsor-section-title {
   height: 100px;
 }
 #countdown .number {
-  font-size: 2em;
+  font-size: 2rem;
   width: 100px;
   text-align: center;
   margin-top: 5px; /* Negative left-right margins to account for 100+ number in the Days countdown
@@ -4517,6 +4571,27 @@ h4.sponsor-section-title {
 #countdown .label {
   margin-top: -5px;
   width: 100px;
+}
+
+@media screen and (max-width: 40rem) {
+  #countdown li {
+    width: 70px;
+    height: 70px;
+  }
+  #countdown .number {
+    font-size: 1.6rem;
+    width: 70px;
+    margin-top: 0;
+  }
+  #countdown .label {
+    width: 70px;
+    font-size: 0.8rem;
+    font-weight: 300;
+  }
+  .pie-plate {
+    width: 70px;
+    height: 70px;
+  }
 }
 
 .topbutton {
