--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -65,6 +65,9 @@ block content
   section.pages-section.plenary
     include partials/plenary
 
+  section.call 
+    include partials/call
+
   //- section.page-section.speakers
   //-   include partials/speaker-grid 
 
@@ -85,6 +88,9 @@ block content
 
   //- section.page-section.sponsors 
   //-   include partials/sponsors-list 
+
+  section.page-section.sponsors-call 
+    include partials/call-sponsors
 
   section.page-section.conference-map
     include partials/map 
