--- a/server/views/partials/schedule-table-outline.pug
+++ b/server/views/partials/schedule-table-outline.pug
@@ -283,4 +283,6 @@
     tr.main-event
       td.schedule-session(colspan='3') Restaurant in Shinshikaji
       td.schedule-venue TBA
-  p.info Tentative schedule. Times subject to change without notice.
+  //- p.info Tentative schedule. Times subject to change without notice.
+  //- p.center
+  //-   a.page-button.opaque(href='/schedule') View Schedule
